bitapp.kube.yml
apiVersion: v1
kind: Service
metadata:
  name: bitapp-web
spec:
  type: LoadBalancer
  selector:
    app: bitapp-web
  ports:
  - port: 5010
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitapp-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bitapp-web
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bitapp-web
    spec:
      containers:
      - name: bitapp-web
        image: chrwalte/bitapp:1.0.0
        ports:
        - containerPort: 80
