portfolio.kube.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
spec:
  tls:
    - hosts:
        - localhost.com
      secretName: secret-tls
  defaultBackend:
    resource:
      apiGroup: localhost.com
      kind: Service
      name: portfolio-web
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-web
spec:
  type: LoadBalancer
  selector:
    app: portfolio-web
  ports:
  - name: https
    port: 443
    targetPort: 443
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-web
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: portfolio-web
    spec:
      containers:
      - name: portfolio-web
        image: chrwalte/portfolio_web:2.0.5
        ports:
        - containerPort: 80
